soap-sample/client_files/INET/log_[Mon Jun 13 13:30:42 2022
].txt
  File "serv_files/INET/testPCD.py", line 1
    /Users/alex/testPCD.py
    ^
SyntaxError: invalid syntax
